// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 fNSrMz"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a danger color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 WzeyB"
    color="danger"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a hint color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 hkKgMI"
    color="hint"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a info color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 gfvOds"
    color="info"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a success color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 fNSrMz"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a warning color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 eKNaii"
    color="warning"
    type="radio"
  />
</div>
`;
